project(LEETCODE)
cmake_minimum_required(VERSION 3.0)

set(CMAKE_CXX_STANDARD 11)

add_executable(1 1_Two_Sum_Problems.cpp)
add_executable(2 2_Two_Sum_Problems.cpp)
add_executable(3 3_Longest_Substring_Without_Repeating_Characters.cpp)
add_executable(4 4_Median_of_Two_Sorted_Arrays.cpp)
add_executable(5 5_Longest_Palindromic_Substring.cpp)
# add_executable(6 6_ZigZag_Conversion.cpp)
# add_executable(7 7_Reverse_Integer.cpp)
# add_executable(8 8_String_to_Integer.cpp)
add_executable(9 9_Palindrome_Number.cpp)
# add_executable(10 10_Regular_Expression_Matching.cpp)
# add_executable(11 11_Container_With_Most_Water.cpp)
add_executable(12 12_Integer_to_Roman.cpp)
add_executable(13 13_Roman_to_Integer.cpp)
# add_executable(14 14_Longest_Common_Prefix.cpp)
# add_executable(15 15_3Sum.cpp)
# add_executable(16 16_3Sum_Closest.cpp)
# add_executable(17 17_Letter_Combinations_of_a_Phone_Number.cpp)
# add_executable(18 18_4Sum.cpp)
# add_executable(19 19_Remove_Nth_Node_From_End_of_List.cpp)
add_executable(20 20_Valid_Parentheses.cpp)
add_executable(27 27_Remove_Element.cpp)
add_executable(121 121_Best_Time_to_Buy_and_Sell_Stock.cpp)